@@ -54,10 +54,6 @@
                         <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                         <arg>--add-exports=java.base/jdk.internal.value=ALL-UNNAMED</arg>
                         <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
-
-                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=mandelbrotfx</arg>
-                        <arg>--add-exports=java.base/jdk.internal.value=mandelbrotfx</arg>
-                        <arg>--add-exports=java.base/jdk.internal.misc=mandelbrotfx</arg>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <path>
@@ -66,6 +62,16 @@
                             <version>${jmh.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <options>
+                        <option>--enable-preview</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
